# Active_Matter_Representation_Learning

./: README.md  pyproject.toml  requirements.txt
analytics/: README.md  analyze_active_matter.py  eda.py  feature_baselines.py  inspect_dataset.py  inspect_hdf5.py  utils_io.py  utils_plots.py  utils_stats.py
configs/: vit_h_jepa_multiscale_a100.yaml
configs/local/: h_jepa_multiscale_cpu_smoke.yaml  physics_vit_jepa_cpu_smoke.yaml
notebooks/: active_matter_jepa_global_vs_spatial.ipynb  active_matter_zeta_diagnostics_local.ipynb  data_exploration.ipynb
reports/: active_matter_data_analytics_report.md
scripts/: smoke_test.sh  train_hjepa_a100.sh
src/active_matter_jepa/: __init__.py  __main__.py  train.py
tests/: test_package_import.py
