[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-matter-jepa"
version = "0.1.0"
description = "Physics-aware ViT and hierarchical JEPA training for active-matter simulations."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Skanda" }]
dependencies = [
  "torch>=2.2",
  "h5py>=3.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "seaborn>=0.13",
  "tqdm>=4.65",
  "PyYAML>=6.0",
  "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
notebooks = [
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[project.scripts]
am-jepa-train = "active_matter_jepa.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
